blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/Service__c.object-meta.xml
<CustomObject>
    <description>One service line the clinic sells to organisations, for example a type of assessment, programme or screening. A catalogue entry with price and delivery mode. Holds no patient or health data.</description>
    <label>Service</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Services</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>