blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The service can currently be sold.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>