blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>Group of the service, for reporting revenue by line.</description>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assessments</fullName>
            </value>
            <value>
                <fullName>Treatment programmes</fullName>
            </value>
            <value>
                <fullName>Diagnostics</fullName>
            </value>
            <value>
                <fullName>Screening and surveillance</fullName>
            </value>
            <value>
                <fullName>Vaccination</fullName>
            </value>
            <value>
                <fullName>Wellbeing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>