blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/Delivery_mode__c.field-meta.xml
<CustomField>
    <fullName>Delivery_mode__c</fullName>
    <description>Where the service is provided. Affects cost and which sites a contract can cover.</description>
    <label>Delivery mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At the clinic</fullName>
            </value>
            <value>
                <fullName>On site at the client</fullName>
            </value>
            <value>
                <fullName>Remote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>