blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/List_price__c.field-meta.xml
<CustomField>
    <fullName>List_price__c</fullName>
    <description>Standard price per pricing unit before discount.</description>
    <label>List price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>