blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/Pricing_unit__c.field-meta.xml
<CustomField>
    <fullName>Pricing_unit__c</fullName>
    <description>What the list price is charged against.</description>
    <label>Pricing unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Per appointment</fullName>
            </value>
            <value>
                <fullName>Per employee</fullName>
            </value>
            <value>
                <fullName>Per session</fullName>
            </value>
            <value>
                <fullName>Per day</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>