blueprints/healthcare-clinics-b2b/salesforce/force-app/main/default/objects/Service__c/fields/Regulated__c.field-meta.xml
<CustomField>
    <fullName>Regulated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The service needs regulator registration or a named clinician lead before it is sold.</description>
    <label>Regulated activity</label>
    <type>Checkbox</type>
</CustomField>